K1J-1328: If logged in user is a doctor it should only display the doctors issued ag7804 and ag114 (#461)